Header titile center alignment fixed

--- a/src/components/EventMedia/EventMediaPresenter.scss
+++ b/src/components/EventMedia/EventMediaPresenter.scss
@@ -128,7 +128,7 @@ body {
   .slection_count {
     display: flex;
     align-items: center;
-    color: $GoFlockFont;
+    color: $GoFlockColor;
     text-align: right;
     font-family: $GoFlockFont;
     font-size: 12px;
